--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
-    "framer-motion": "^12.11.0",
+    "chart.js": "^4.4.9",
+    "framer-motion": "^12.11.3",
     "react": "^19.1.0",
+    "react-calendar-heatmap": "^1.10.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "react-sparklines": "^1.7.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
