--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "react-parallax-tilt": "^1.7.295",
     "react-router-dom": "^7.6.0",
     "react-sparklines": "^1.7.0",
     "tailwindcss": "^4.1.6"
