--- a/Extension/src/manifest.json
+++ b/Extension/src/manifest.json
@@ -7,9 +7,12 @@
     "activeTab",
     "storage",
     "tabs",
-    "idle"
+    "idle",
+    "tabCapture",
+    "windows"
   ],
   "host_permissions": [
+    "<all_urls>",
     "http://localhost:5000/*"
   ],
   "background": {
@@ -19,8 +22,8 @@
     {
       "matches": ["http://*/*", "https://*/*"],
       "js": ["content.js"],
-      "run_at": "document_start",
-      "all_frames": true
+      "run_at": "document_idle",
+      "all_frames": false
     }
   ],
   "action": {
